# VLA_FOR_IKITBOT

./: .gitignore  CMakeLists.txt  README.md  aa.html  extract_bag_frames  package.xml  requirements.txt  requirements_ros.txt
.github/: copilot-instructions.md  scratchpad.md
.venv311/: pyvenv.cfg
configs/: classes.py  classes.txt  data.yaml
data/: augmentation_strategy.json
data/seed_dataset/: classes.txt
data/seed_dataset/labels/: seed_0000.txt  seed_0002.txt  seed_0003.txt  seed_0005.txt  seed_0006.txt  seed_0007.txt  seed_0010.txt  seed_0013.txt  seed_0014.txt  seed_0015.txt  seed_0017.txt  seed_0029.txt  train.cache  val.cache
data/seed_dataset_v2/auto_labels/: seed_0025.txt  seed_0049.txt  seed_0050.txt  seed_0051.txt  seed_0054.txt  seed_0060.txt  seed_0062.txt  seed_0063.txt  (+33 more)
docs/: ANNOTATION_QUICKREF.md  annotation_guide.md  annotation_integration_summary.md  annotation_tools_guide.md  data_extraction_report.md  day1_summary.md  extract_bag_on_macos.md  gpu_server_guide.md  jetson_nano_test_report.md  jetson_setup.md
label_studio/: README.md  config.xml
launch/: camera_only.launch  demo.launch  detector_only.launch
scripts/: augment_for_vacuum.py  auto_annotate.py  auto_annotate.sh  benchmark_jetson.py  check_annotation_progress.py  check_environment.py  compile_and_extract.sh  demo_annotation.sh  integrate_opensource_data.py  label_studio_ml_backend.py  ls_export_to_yolo.py  ls_import_with_preannots.py  optimize_day3.sh  prepare_training_data.py  resample_seed_dataset.py  run_demo.sh  setup_annotation_tools.sh  setup_jetson.sh  setup_ls_project.py  setup_training_env.sh  start_label_studio.sh  test_rgbd_stream.py  train_day2.sh  train_multi_gpu.sh  update_ls_urls.py
src/data_processing/: analyze_data.py  convert_raw_to_png.py  extract_bag_frames.cpp  extract_frames.py  extract_frames_simple.py  extract_rosbag_images.py  prepare_yolo_dataset.py  select_seed_dataset.py  split_dataset.py  validate_annotations.py
src/deployment/: jetson_test.py
src/optimization/: model_optimization.py
src/ros_demo/: README.md  __init__.py  obstacle_detector_node.py  video_processor_node.py
src/training/: train.py  train_baseline.py  train_distributed.py
(+12 files in other folders)
