<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>1.0.0</version>
  <description>
    扫地机器人地面视角障碍物检测系统 ROS Demo
    使用 YOLO 模型进行实时障碍物检测
  </description>

  <maintainer email="your-email@example.com">Obstacle Detection Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/your-org/obstacle-detection</url>
  <author email="your-email@example.com">Your Name</author>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- 执行依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>

  <!-- Python 依赖 -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <!-- 其他导出配置 -->
  </export>
</package>

